package ub.edu.model;

import java.util.ArrayList;

public abstract class Estat {

    public Estat() {
    }

    public abstract DurationEpisodi getTempsVist();
}